Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,5 +18,5 @@ steps:
   - task: CmdLine@2
     inputs:
       script: |
-        docker login -u qs -p qazplm,./$
+        docker login registry.zyaxin.com -u qs -p qazplm,./$
         docker push qs.web.api:latest
