--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -19,5 +19,5 @@ steps:
     inputs:
       script: |
         docker login -u=zhangyaxing521@qq.com -p qazplm,./$ registry.cn-hangzhou.aliyuncs.com
-        docker tag $(Build.BuildId) registry.cn-hangzhou.aliyuncs.com/qs315/qsres:latest
+        docker tag qs.web.api registry.cn-hangzhou.aliyuncs.com/qs315/qsres:latest
         docker push registry.cn-hangzhou.aliyuncs.com/qs315/qsres:latest
