--- a/QingShan.Web/QingShan.Web.csproj
+++ b/QingShan.Web/QingShan.Web.csproj
@@ -38,4 +38,10 @@
     </None>
   </ItemGroup>
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+  <ItemGroup>
+    <None Remove="..\.dockerignore" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="..\.dockerignore" />
+  </ItemGroup>
 </Project>
