--- a/QingShan.Web/nlog.config
+++ b/QingShan.Web/nlog.config
@@ -48,19 +48,19 @@ CREATE TABLE `log` (
     <target
      xsi:type="File"
      name="DebugFile"
-     fileName="Logs\Debug\${shortdate}.log"
+     fileName="Logs/Debug/${shortdate}.log"
      layout="日志时间：${longdate}${newline}日志来源：${callsite}${newline}日志级别：${uppercase:${level}}${newline}消息内容：${message}${newline}----------------------------------------------------------------${newline}" >
     </target>
     <target
       xsi:type="File"
       name="InfoFile"
-      fileName="Logs\Info\${shortdate}.log"
+      fileName="Logs/Info/${shortdate}.log"
       layout="日志时间：${longdate}${newline}日志来源：${callsite}${newline}日志级别：${uppercase:${level}}${newline}消息内容：${message}${newline}----------------------------------------------------------------${newline}" >
     </target>
     <target
       xsi:type="File"
       name="ErrorFile"
-      fileName="Logs\Error\${shortdate}.log"
+      fileName="Logs/Error/${shortdate}.log"
       layout="日志时间：${longdate}${newline}日志来源：${callsite}${newline}日志级别：${uppercase:${level}}${newline}消息内容：${message}${newline}异常信息：${exception:format=tostring}${newline}----------------------------------------------------------------${newline}" >
     </target>
   </targets>
