--- a/QingShan.Web/appsettings.json
+++ b/QingShan.Web/appsettings.json
@@ -130,6 +130,6 @@
   },
   "CorsAccessorSettings": {
     "PolicyName": "web跨域",
-    "WithOrigins": [ "http://zyaxin.com:8082", "http://localhost:9528", "http://localhost:8000" ]
+    "WithOrigins": [ "http://zyaxin.com:8082", "http://localhost:9528", "http://localhost:8000", "https://web.zyaxin.com" ]
   }
 }
