--- a/QingShan.Web/appsettings.Production.json
+++ b/QingShan.Web/appsettings.Production.json
@@ -133,6 +133,6 @@
   },
   "CorsAccessorSettings": {
     "PolicyName": "web跨域",
-    "WithOrigins": [ "http://zyaxin.com:8082", "http://localhost:9528", "http://zyaxin.com", "http://web.zyaxin.com" ]
+    "WithOrigins": [ "http://zyaxin.com:8082", "http://localhost:8000", "http://zyaxin.com", "https://web.zyaxin.com" ]
   }
 }
