--- a/QingShan.Web/appsettings.Development.json
+++ b/QingShan.Web/appsettings.Development.json
@@ -15,7 +15,7 @@
   "AppSettings": {
     "DatabaseAccessorSettings": {
       "Type": "Mysql",
-      "ConnectionString": "Data Source=101.200.242.7;Port=3306;User ID=root;Password=qsP@ssw0rd33..; Initial Catalog=QingShan;Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
+      "ConnectionString": "Data Source=101.35.101.237;Port=3306;User ID=root;Password=qsP@ssw0rd33..; Initial Catalog=QingShan;Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
       "SyncStructure": true,
       "PrintingSQL": true,
       "GlobalFilter": true
@@ -138,27 +138,39 @@
     "WithOrigins": [ "http://zyaxin.com:8082", "http://localhost:9528", "http://localhost:8001", "http://localhost:8000" ]
   },
   "IpRateLimiting": {
-    //false则全局将应用限制，并且仅应用具有作为端点的规则* 。 true则限制将应用于每个端点，如{HTTP_Verb}{PATH}
-    "EnableEndpointRateLimiting": true,
-    //false则拒绝的API调用不会添加到调用次数计数器上
+    "EnableEndpointRateLimiting": false,
     "StackBlockedRequests": false,
-    //注意这个配置，表示获取用户端的真实IP，我们的线上经过负载后是 X-Forwarded-For，而测试服务器没有，所以是X-Real-IP
     "RealIpHeader": "X-Real-IP",
     "ClientIdHeader": "X-ClientId",
-    "HttpStatusCode": 200,
+    "HttpStatusCode": 429,
     "QuotaExceededResponse": {
       "Content": "{{\"code\":429,\"msg\":\"访问过于频繁，请稍后重试\",\"data\":null}}",
       "ContentType": "application/json",
-      "StatusCode": 200
+      "StatusCode": 429
     },
-    "IpWhitelist": [],
-    "EndpointWhitelist": [],
-    "ClientWhitelist": [],
+    //"IpWhitelist": [ "127.0.0.1", "::1/10", "192.168.0.0/24" ],
+    //"EndpointWhitelist": [ "get:/api/license", "*:/api/status" ],
+    //"ClientWhitelist": [ "dev-id-1", "dev-id-2" ],
     "GeneralRules": [
       {
-        "Endpoint": "*:/api/values/test",
-        "Period": "5s",
+        "Endpoint": "*",
+        "Period": "1s",
         "Limit": 3
+      },
+      {
+        "Endpoint": "*",
+        "Period": "15m",
+        "Limit": 300
+      },
+      {
+        "Endpoint": "*",
+        "Period": "12h",
+        "Limit": 1000
+      },
+      {
+        "Endpoint": "*",
+        "Period": "7d",
+        "Limit": 10000
       }
     ]
   }
