--- a/QingShan.Web/appsettings.json
+++ b/QingShan.Web/appsettings.json
@@ -124,9 +124,15 @@
 
   },
   "Cache": {
-    //"Redis": {
-    //  "ConnectionString": "127.0.0.1:6379"
-    //}
+    "CacheWay": "Redis",
+    "Redis": {
+      // 连接字符串
+      "Host": "101.35.101.237:6379",
+      "Password": "zP@ssw0rd123..",
+      // 键名前缀
+      "InstanceName": "qs_",
+      "DefaultDatabase": "10"
+    }
   },
   "CorsAccessorSettings": {
     "PolicyName": "web跨域",
