--- a/QingShan.Core/QingShan.Core.csproj
+++ b/QingShan.Core/QingShan.Core.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0;netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Authors>QingShan</Authors>
     <Description>QingShan.Core基础库</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
