--- a/QingShan.Web/appsettings.Development.json
+++ b/QingShan.Web/appsettings.Development.json
@@ -15,7 +15,12 @@
   "AppSettings": {
     "DatabaseAccessorSettings": {
       "Type": "Mysql",
-      "ConnectionString": "Data Source=101.35.101.237;Port=3306;User ID=root;Password=qsP@ssw0rd33..; Initial Catalog=QingShan;Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
+      "Host": "101.35.101.237",
+      "Port": 3306,
+      "User": "root",
+      "Password": "qsP@ssw0rd33..",
+      "Database": "QingShan",
+      "Extension": "Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
       "SyncStructure": true,
       "PrintingSQL": true,
       "GlobalFilter": true
