--- a/QingShan.Core/QingShan.Core.csproj
+++ b/QingShan.Core/QingShan.Core.csproj
@@ -1,80 +1,101 @@
-
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <Authors>QingShan</Authors>
-    <Description>QingShan.Core基础库</Description>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <OutputType>Library</OutputType>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+		<Authors>QingShan</Authors>
+		<Description>QingShan.Core基础库</Description>
+		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+		<OutputType>Library</OutputType>
+		<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>.\QingShan.Core.xml</DocumentationFile>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DocumentationFile>.\QingShan.Core.xml</DocumentationFile>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="FreeSql\UnitOfWork\Filters\**" />
-    <EmbeddedResource Remove="FreeSql\UnitOfWork\Filters\**" />
-    <None Remove="FreeSql\UnitOfWork\Filters\**" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="FreeSql\UnitOfWork\Filters\**" />
+		<EmbeddedResource Remove="FreeSql\UnitOfWork\Filters\**" />
+		<None Remove="FreeSql\UnitOfWork\Filters\**" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Remove="CodeGenerator\Pages\Codegen.cshtml" />
-  </ItemGroup>
+	<ItemGroup>
+		<Content Include="CodeGenerator\Templates\IService.cshtml">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="CodeGenerator\Templates\Service.cshtml">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="CodeGenerator\Templates\Dto.cshtml">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="CodeGenerator\Templates\Controller.cshtml">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 
-  <ItemGroup>
-    <Content Include="CodeGenerator\Pages\Codegen.cshtml">
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+		</Content>
+		<Content Include="CodeGenerator\Templates\Model.cshtml">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="AspectCore.Core" Version="2.2.0" />
-    <PackageReference Include="AspectCore.Extensions.DependencyInjection" Version="2.2.0" />
-    <PackageReference Include="AspNetCoreRateLimit" Version="4.0.1" />
-    <PackageReference Include="CSRedisCore" Version="3.6.6" />
-    <PackageReference Include="FreeSql" Version="2.3.200" />
-    <PackageReference Include="FreeSql.Provider.MySql" Version="2.3.200" />
-    <PackageReference Include="FreeSql.Provider.Sqlite" Version="2.3.200" />
-    <PackageReference Include="FreeSql.Provider.SqlServer" Version="2.3.200" />
-    <PackageReference Include="FreeSql.Repository" Version="2.3.200" />
-    <PackageReference Include="Mapster" Version="7.0.0" />
-    <PackageReference Include="Mapster.EFCore" Version="1.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="5.0.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0.0" />
-    <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
-    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
-    <PackageReference Include="MiniProfiler.AspNetCore" Version="4.2.1" />
-    <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Panda.DynamicWebApi" Version="1.1.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
-    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="CodeGenerator\Pages\Codegen.cshtml">
+			<ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="AspNetCoreRateLimit" Version="4.0.1" />
+		<PackageReference Include="CSRedisCore" Version="3.6.6" />
+		<PackageReference Include="FreeSql" Version="2.3.200" />
+		<PackageReference Include="FreeSql.Provider.MySql" Version="2.3.200" />
+		<PackageReference Include="FreeSql.Provider.Sqlite" Version="2.3.200" />
+		<PackageReference Include="FreeSql.Provider.SqlServer" Version="2.3.200" />
+		<PackageReference Include="FreeSql.Repository" Version="2.3.200" />
+		<PackageReference Include="Mapster" Version="7.0.0" />
+		<PackageReference Include="Mapster.EFCore" Version="1.1.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="5.0.1" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0.0" />
+		<PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
+		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
+		<PackageReference Include="MiniProfiler.AspNetCore" Version="4.2.1" />
+		<PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.1" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="Panda.DynamicWebApi" Version="1.1.0" />
+		<PackageReference Include="RazorEngineCore" Version="2021.7.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\QingShan\QingShan.csproj" />
+		<ProjectReference Include="..\QingShan\QingShan.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="App\Attributes\" />
-	  <Folder Include="App\Consts\" />
-	  <Folder Include="App\Core\" />
-	  <Folder Include="CorsAccessor\" />
-	  <Folder Include="Redis\Options\" />
-	  <Folder Include="Redis\Contract\" />
+		<Folder Include="App\Attributes\" />
+		<Folder Include="App\Consts\" />
+		<Folder Include="App\Core\" />
+		<Folder Include="CorsAccessor\" />
+		<Folder Include="Redis\Options\" />
+		<Folder Include="Redis\Contract\" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Resource Include="CodeGenerator\Templates\Controller.cshtml" />
+		<Resource Include="CodeGenerator\Templates\Dto.cshtml" />
+		<Resource Include="CodeGenerator\Templates\Model.cshtml">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Resource>
 	</ItemGroup>
 </Project>
