--- a/QingShan.Web/appsettings.json
+++ b/QingShan.Web/appsettings.json
@@ -15,9 +15,15 @@
   "AppSettings": {
     "DatabaseAccessorSettings": {
       "Type": "Mysql",
-      "ConnectionString": "Data Source=mysqlserver;Port=3306;User ID=root;Password=123456; Initial Catalog=QingShan;Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
+      "Host": "101.35.101.237",
+      "Port": 3306,
+      "User": "root",
+      "Password": "qsP@ssw0rd33..",
+      "Database": "QingShan",
+      "Extension": "Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
       "SyncStructure": true,
-      "PrintingSQL": false
+      "PrintingSQL": true,
+      "GlobalFilter": true
     },
     "SpecificationDocumentSettings": {
       "DocumentTitle": "青杉接口服务",
