--- a/src/QingShan.Core/QingShan.Core.csproj
+++ b/src/QingShan.Core/QingShan.Core.csproj
@@ -47,19 +47,12 @@
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.1" />
 		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
+		<PackageReference Include="QingShan" Version="1.1.0" />
 	</ItemGroup>
-
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
-
 	<ItemGroup>
-		<ProjectReference Include="..\QingShan\QingShan.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Folder Include="CorsAccessor\" />
-		<Folder Include="Redis\Options\" />
-		<Folder Include="Redis\Contract\" />
+	  <ProjectReference Include="..\QingShan\QingShan.csproj" />
 	</ItemGroup>
 </Project>
