--- a/examples/QingShan.Web/appsettings.Development.json
+++ b/examples/QingShan.Web/appsettings.Development.json
@@ -15,15 +15,21 @@
   "AppSettings": {
     "DatabaseAccessorSettings": {
       "Type": "Mysql",
-      "Host": "101.35.101.237",
+      //"Host": "101.35.101.237",
+      //"Port": 3306,
+      //"User": "root",
+      //"Password": "qsP@ssw0rd33..",
+      //"Database": "QingShan",
+      "Host": "localhost",
       "Port": 3306,
       "User": "root",
-      "Password": "qsP@ssw0rd33..",
-      "Database": "QingShan",
+      "Password": "123456",
+      "Database": "qingshan",
       "Extension": "Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
       "SyncStructure": true,
       "PrintingSQL": true,
-      "GlobalFilter": true
+      "GlobalFilter": true,
+      "ReturnCreateSql": true
     },
     "SpecificationDocumentSettings": {
       "DocumentTitle": "青杉接口服务",
