--- a/examples/QingShan.Web/appsettings.json
+++ b/examples/QingShan.Web/appsettings.json
@@ -15,11 +15,11 @@
   "AppSettings": {
     "DatabaseAccessorSettings": {
       "Type": "Mysql",
-      "Host": "101.35.101.237",
+      "Host": "localhost",
       "Port": 3306,
       "User": "root",
-      "Password": "qsP@ssw0rd33..",
-      "Database": "QingShan",
+      "Password": "123456",
+      "Database": "qingshan",
       "Extension": "Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
       "SyncStructure": true,
       "PrintingSQL": true,
