--- a/generator/QingShan.CodeGenerator/QingShan.CodeGenerator.csproj
+++ b/generator/QingShan.CodeGenerator/QingShan.CodeGenerator.csproj
@@ -4,12 +4,14 @@
 		<OutputType>Exe</OutputType>
 		<PackAsTool>true</PackAsTool>
 		<TargetFramework>net5.0</TargetFramework>
+		<Version>1.0.1</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
 	  <None Remove="CodeGenerator\Pages\Codegen.cshtml" />
 	  <None Remove="CodeGenerator\Pages\Message.cshtml" />
 	  <None Remove="CodeGenerator\Templates\Controller.cshtml" />
+	  <None Remove="CodeGenerator\Templates\Entity.cshtml" />
 	  <None Remove="CodeGenerator\Templates\IContract.cshtml" />
 	  <None Remove="CodeGenerator\Templates\InputDto.cshtml" />
 	  <None Remove="CodeGenerator\Templates\OutputDto.cshtml" />
@@ -35,11 +37,20 @@
 	  <Content Include="CodeGenerator\Templates\IContract.cshtml">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </Content>
+	  <Content Include="CodeGenerator\Templates\Entity.cshtml">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+	  </Content>
 	  <Content Include="CodeGenerator\Templates\InputDto.cshtml">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
 	  </Content>
 	  <Content Include="CodeGenerator\Templates\OutputDto.cshtml">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
 	  </Content>
 	  <Content Include="CodeGenerator\Templates\Service.cshtml">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
