--- a/template/Nuget/Content/Template.Web/appsettings.Development.json
+++ b/template/Nuget/Content/Template.Web/appsettings.Development.json
@@ -28,7 +28,7 @@
     "SpecificationDocumentSettings": {
       "DocumentTitle": "接口服务",
       "FormatAsV2": true,
-      "RoutePrefix": "Swagger",
+      "RoutePrefix": "",
       "SpecificationOpenApiInfo": [
         {
           "Group": "Default",
@@ -129,7 +129,7 @@
   },
   "CorsAccessorSettings": {
     "PolicyName": "web跨域",
-    "WithOrigins": [ "http://zyaxin.com:8082", "http://localhost:9528", "http://localhost:8000", "https://web.zyaxin.com" ]
+    "WithOrigins": [ "http://zyaxin.com", "http://localhost:9528", "http://localhost:8000", "https://web.zyaxin.com" ]
   }
 }
 
