--- a/template/Nuget/Content/Template.Services/Template.Services.csproj
+++ b/template/Nuget/Content/Template.Services/Template.Services.csproj
@@ -7,13 +7,20 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="Template.Services.xml" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="Template.Services.xml">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\Template.Data\Template.Data.csproj" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="QingShan.Core" Version="1.1.1" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Folder Include="Demo\Dto\OutputDto\" />
+		<PackageReference Include="QingShan.Core" Version="1.2.1" />
 	</ItemGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<DocumentationFile>.\Template.Services.xml</DocumentationFile>
