--- a/generator/QingShan.CodeGenerator/Properties/launchSettings.json
+++ b/generator/QingShan.CodeGenerator/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "QingShan.CodeGenerator": {
       "commandName": "Project",
-      "commandLineArgs": "\"Data Source=101.35.101.237;Port=3306;User ID=root;Password=qsP@ssw0rd33..; Initial Catalog=QingShan;Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;\" \"QingShan.Web.Areas.Admin.Controllers\" \"QingShan.Services\" \"QingShan.Services\" \"QingShan.Services\" \"QingShan.DataLayer.Entities\" \"D:\\Code\\dotnet\\QingShan\""
+      "commandLineArgs": "\"Data Source=localhost;Port=3306;User ID=root;Password=123456; Initial Catalog=spring_boot_test;Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;\" \"Demo.Web.Controllers\" \"Demo.Services\" \"Demo.Services\" \"Demo.Services\" \"Demo.Data.Entities\" \"D:\\Code\\dotnet\\Demo\""
     }
   }
 }
