1.修复Option DI注入无法获取配置 2.新增文档开始或显示

--- a/examples/QingShan.Web/appsettings.Production.json
+++ b/examples/QingShan.Web/appsettings.Production.json
@@ -25,7 +25,8 @@
     "SpecificationDocumentSettings": {
       "DocumentTitle": "青杉接口服务",
       "FormatAsV2": true,
-      "RoutePrefix": "",
+      "RoutePrefix": "swagger",
+      "IsView": true,
       "SpecificationOpenApiInfo": [
         {
           "Group": "Default",
