[新增]代码生成器

--- a/tests/QingShan.Test/QingShan.Test.csproj
+++ b/tests/QingShan.Test/QingShan.Test.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\QingShan.Core\QingShan.Core.csproj" />
     <ProjectReference Include="..\..\src\QingShan\QingShan.csproj" />
   </ItemGroup>
 
