[新增]代码生成器

--- a/generator/QingShan.CodeGeneratorWeb/appsettings.Development.json
+++ b/generator/QingShan.CodeGeneratorWeb/appsettings.Development.json
@@ -15,13 +15,8 @@
   "AppSettings": {
     "DatabaseAccessorSettings": {
       "Type": "SqlServer",
-      "ConnectionString": "User ID=sa;Initial Catalog=Estimate;Data Source=.;Password=81154364;Encrypt=True;TrustServerCertificate=True;Pooling=true;Min Pool Size=1",
-      "Host": "localhost",
-      "Port": 3306,
-      "User": "root",
-      "Password": "123456",
-      "Database": "Estimate",
-      "Extension": "Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
+      "DataBase": "Estimate_Dev",
+      "ConnectionString": "User ID=sa;Initial Catalog=Estimate_Dev;Data Source=39.100.152.240,8006;Password=Plin5230;Encrypt=True;TrustServerCertificate=True;Pooling=true;Min Pool Size=1",
       "SyncStructure": true,
       "PrintingSQL": true,
       "GlobalFilter": true
