--- a/generator/QingShan.CodeGeneratorWeb/appsettings.Development.json
+++ b/generator/QingShan.CodeGeneratorWeb/appsettings.Development.json
@@ -16,7 +16,7 @@
     "DatabaseAccessorSettings": {
       "Type": "SqlServer",
       "DataBase": "Estimate_Dev",
-      "ConnectionString": "User ID=sa;Initial Catalog=Estimate_Dev;Data Source=39.100.152.240,8006;Password=Plin5230;Encrypt=True;TrustServerCertificate=True;Pooling=true;Min Pool Size=1",
+      "ConnectionString": "User ID=sa;Initial Catalog=Estimate_Dev;Data Source=.;Password=123456;Encrypt=True;TrustServerCertificate=True;Pooling=true;Min Pool Size=1",
       "SyncStructure": true,
       "PrintingSQL": true,
       "GlobalFilter": true
