--- a/src/QingShan/QingShan.csproj
+++ b/src/QingShan/QingShan.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0;netcoreapp3.1;net6.0</TargetFrameworks>
+    <TargetFrameworks>net5.0;netcoreapp3.1;net6.0;net7.0;</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>青杉基础NuGet表</Description>
     <PackageId>QingShan</PackageId>
     <Authors>青杉</Authors>
-    <Version>1.2.2.2</Version>
+    <Version>1.4.0</Version>
     <PackageProjectUrl>https://gitee.com/ZYX315/QingShan</PackageProjectUrl>
     <RepositoryUrl>https://gitee.com/ZYX315/QingShan</RepositoryUrl>
   </PropertyGroup>
